--- a/css/discord.css
+++ b/css/discord.css
@@ -11,7 +11,7 @@
 background-color: rgba(0, 0, 0, 0.3);
 }
 #banner{
-    background: url(discord.ong.png);
+    background: url(discord.gif);
     background-size: cover;
     background-position: center;
     height: 100vh;
