--- a/css/discord.css
+++ b/css/discord.css
@@ -11,20 +11,49 @@
 background-color: rgba(0, 0, 0, 0.3);
 }
 #banner{
-    background: url(discord.gif);
+    background: url(discordpng.png);
     background-size: cover;
     background-position: center;
     height: 100vh;
   }
-
+.button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 10px;
+}
 h1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color:#ecf0f1;
-    padding-top: 250px;
-    padding-left: 500px;
+    padding-top: 2%;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
     
     
 }
+nav {
+    height: 25;
+  }
+  h1 {
+    color: rgb(255, 255, 255);
+    font-weight: 0.2;
+    opacity: 0.8;
+  
+  }
+  
+  p {
+    color:#ffff;
+    font-weight: 0.2;
+    opacity: 0.8;
+  
+  }
+  
+  h2 {
+    color: #ffff;
+    font-weight: 0.2;
+    opacity: 0.8;
+  }
 header {
     
     text-decoration: none;
