--- a/css/discord.css
+++ b/css/discord.css
@@ -27,29 +27,34 @@ h1{
     justify-content: center;
     align-items: center;
     color:#ecf0f1;
-    padding-top: 2%;
+    padding: 2%;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
     
     
 }
-nav {
-    height: 25;
-  }
+
   h1 {
     color: rgb(255, 255, 255);
-    font-weight: 0.2;
-    opacity: 0.8;
+    font-weight: 300px;
+    
+    font-family: 'Unica One', cursive;
   
   }
   
   p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color:#ffff;
-    font-weight: 0.2;
+    padding: 0.1%;
+    font-weight: 0.9;
     opacity: 0.8;
+    font-family: 'Rancho', cursive;
   
   }
   
   h2 {
+    padding-top: 10px;
     color: #ffff;
     font-weight: 0.2;
     opacity: 0.8;
