--- a/css/home.css
+++ b/css/home.css
@@ -8,6 +8,7 @@
 
 }
 #banner{
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0.785) 0%, rgba(0,0,0,0.7483368347338936) 42%, rgba(0,0,0,0.41220238095238093) 100%);
     background: url(home.png);
     background-size: cover;
     background-position: center;
@@ -15,12 +16,19 @@
   }
 
 h1{
-    color:#ecf0f1;
-    padding-top: 250px;
-    padding-left: 500px;
+    color:#ffae00;
+    display: flex;
+    justify-content: center;
+    padding-top: 15%;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
     
     
+}
+h2{
+    color:#ffae00;
+    display: flex;
+    justify-content: center;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif  
 }
 header {
     
@@ -86,23 +94,13 @@ header{
 
 }
 
-.play {
-    
-    margin-top: 2rem;
-    margin-left: 850px;
-    align-self: center;
-    font-family: montserrat;
-    font-weight: 500;
-    font-size: 16px;
-    color: #ecf0f1;
-    text-decoration: none;
-    background-color: rgba(0,136,169,1) ;
-    border: none;
-    border-radius: 50px;
-    cursor:pointer;
-    transition: all 0.3s ease 0s;
-    
-}
+
 .play:hover{
     background-color: rgba(0,136,169,0.5) ;
+}
+.button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 2%;
 }
