--- a/css/join.css
+++ b/css/join.css
@@ -8,12 +8,11 @@
 
 }
 #banner{
-    background: url(staff.gif);
+    background: url(rules.jpg);
     background-size: cover;
     background-position: center;
     height: 100vh;
   }
-
 h1{
     color:#ecf0f1;
     padding-top: 250px;
@@ -27,9 +26,11 @@ header {
     text-decoration: none;
 
 }
-
-
-
+.ip {
+    color: #2c2d2e;
+    display: flex;
+    justify-content: center;
+  }
 button {
     padding: 9px 25px;
     background-color: rgba(0,136,169,1) ;
@@ -37,6 +38,8 @@ button {
     border-radius: 50px;
     cursor:pointer;
     transition: all 0.3s ease 0s;
+    display: flex;
+    justify-content: center;
     
 }
 button:hover {
@@ -75,7 +78,6 @@ header{
     margin-right: auto;
     justify-content: left;
 }
-
 .nav_links
 {
     list-style: none;
@@ -86,14 +88,15 @@ header{
     text-decoration: none;
 
 }
-
-
-.play:hover{
-    background-color: rgba(0,136,169,0.5) ;
-}
-a, button, .button2{
+#alert {
+    width: 10%;
+    border-radius: 25px;
+    text-align: center;
     display: flex;
     justify-content: center;
-    align-items: center;
-    padding-top: 2%;
-}
+    background-color: #02cb69;
+    color: #ffffff;
+    position: absolute;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    
+  }
